<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ACE6E6"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="394dp"
        android:layout_height="523dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:fontFamily="sans-serif"
            android:text="@string/textTitulo"
            android:textAlignment="center"
            android:textColor="#112A46"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textNombre"
            android:textAlignment="inherit"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/valueNombre"
            android:inputType="text"
            android:textColorHint="#112A46"
            android:textAlignment="inherit"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textEdad"
            android:textAlignment="inherit"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="|"
            android:ems="10"
            android:textColorHint="#112A46"
            android:hint="@string/valueEdad"
            android:inputType="number"
            android:textAlignment="inherit"
            android:textColor="#112A46"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textCelular"
            android:textAlignment="inherit"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:textColorHint="#112A46"
            android:hint="@string/valueCelular"
            android:inputType="phone"
            android:textAlignment="inherit"
            android:textColor="#112A46"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textEmail"
            android:textAlignment="inherit"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:textColor="#112A46"
            android:textColorHint="#112A46"
            android:hint="@string/valueEmail"
            android:inputType="textEmailAddress"
            android:textAlignment="inherit"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textAlready"
            android:textAlignment="center"
            android:textColor="#112A46"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnSaludar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:insetLeft="150dp"
            android:insetTop="10dp"
            android:onClick="saludar"
            android:text="@string/textBtnSaludar"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>